# rag-knowledge-base

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  build-nuitka.ps1  build.ps1  build.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/rag_kb/: __init__.py  chunker.py  cli.py  config.py  core.py  daemon.py  daemon_client.py  device.py  embedder.py  embedding_backends.py  file_manifest.py  indexer.py  mcp_server.py  metrics.py  models.py  rpc_protocol.py  search.py  sharing.py  skip_patterns.py  ui.py  vector_store.py  watcher.py  web_ui.py
src/rag_kb/parsers/: __init__.py  base.py  code_parser.py  csv_parser.py  docx_parser.py  epub_parser.py  html_parser.py  image_parser.py  json_parser.py  log_parser.py  markdown_parser.py  odf_parser.py  pdf_parser.py  pptx_parser.py  registry.py  rst_parser.py  rtf_parser.py  txt_parser.py  xlsx_parser.py  xml_parser.py  yaml_parser.py
tests/: conftest.py  test_architecture.py  test_cancellation.py  test_chunker.py  test_concurrency.py  test_config.py  test_config_full.py  test_crash_recovery.py  test_daemon_integration.py  test_device.py  test_e2e_lifecycle.py  test_e2e_search_pipeline.py  test_edge_cases.py  test_embedder.py  test_file_manifest_ext.py  test_indexer_full.py  test_metrics.py  test_models.py  test_parsers_all.py  test_performance.py  test_rpc_protocol.py  test_search_units.py  test_security.py  test_sharing_full.py  test_skip_patterns.py  test_vector_store_full.py  test_watcher.py
tests/fixtures/: test.csv  test.docx  test.epub  test.html  test.ini  test.js  test.json  test.jsonl  test.md  test.odp  test.ods  test.odt  test.pptx  test.rst  test.rtf  test.sh  test.sql  test.tiff  test.toml  test.tsv  test.txt  test.xlsx  test.xml  test.yaml
